tests/snapshots/script__test_script_bash.snap
---
source: tests/script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
#!/usr/bin/env bash

set -euo pipefail

if ! command -v claptrap &> /dev/null; then
    echo "claptrap command not found. Please install it first, see https://claptrap.cli.rs for instructions."
    exit 1
fi

eval "$(claptrap --spec tests/resources/script/bash/spec.toml -- "$@")"

if [ -z "${claptrap__subcommand+x}" ]; then
  if [ -n "${claptrap_mode+x}" ]; then
    echo "claptrap_mode: ${claptrap_mode}"
  fi
  if [ -n "${claptrap_protocol+x}" ]; then
    echo "claptrap_protocol: ${claptrap_protocol}"
  fi
else
  echo "claptrap__subcommand: ${claptrap__subcommand}"
fi
